CHANGELOG -- $Id: changelog 169 2008-07-10 22:01:03Z shred $


R15
  * NOTE: There were major changes in the R15's API. If you upgrade to R15,
    compile time errors may occur.
  * NOTE: Since R15, the Apache License 2 is used! If your code requires the
    GPL/LGPL/MPL tri-license, please stay with R14.
  * Removed all deprecated code and JDK 1.4 compatibility code
  * Added Generics support
  * Added ListenerManager to easily manage all kind of listeners

R14 (2008-07-10)
  * NOTE: R14 is the last release that is JDK1.4 compatible. Starting from
    R15, at least JDK1.5 will be required. This also involves major API
    changes.
  * Added EmptyTableModel
  * Added PhpSerializer
  * Napkin L&F added to the JLAFSelector (http://napkinlaf.sourceforge.net/)
  * JToolbarButton constructor now also supports button titles.
  * SwingUtils now offers method to get a recursive list of Components, as
    well as a method to enable a Component recursively.
  * Removed the wizard package for now.

R13 (2006-07-26)
  * Removed all JDK1.3 compatibilty code.
  * Switched to Subversion
  * Added junit to the project, so there are no Eclipse SDK dependency
    issues any more.
  * Forgot some serialVersionUIDs.
  * Added UncloseableInputStream and UncloseableOutputStream.
  * HTTPRequest: a DataProvider now cannot unintentionally close the
    OutputStream.
  * HTTPRequest now gives access to the InputStream for binary results.
  * HTTPRequest: forgot to explicitely set POST request method. It was
    still working because of some internal Java magic.
  * JImageViewer is now Printable.

R12 (2005-12-27)
  * NOTE: R12 is the last release that is JDK1.3 compatible. Starting from
    R13, at least JDK1.4 will be required.
  * Reduced memory consumption of JIntegerFilter.
  * JHistoryTextField will not trigger an event if a selection was made from
    the combobox or the component just lost the focus.
  * BUGFIX: JToolbarButton uses setContentAreaFilled() instead of